--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
 <!-- NAVBAR -->
-<nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
+<nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700" data-bs-theme="light">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
           <img src="imagens/snambiental-logo.png" class="h-8 logo" alt="SN Ambiental Logo"/>
