--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     
 <!-- NAVBAR -->
-<nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700" data-bs-theme="light">
+<nav class="bg-white" data-bs-theme="light">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
           <img src="imagens/snambiental-logo.png" class="h-8 logo" alt="SN Ambiental Logo"/>
-          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white titulozin">GRUPO SN AMBIENTAL</span>
+          <span class="self-center text-2xl font-semibold whitespace-nowrap titulozin">GRUPO SN AMBIENTAL</span>
       </a>
       <button data-collapse-toggle="navbar-multi-level" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-multi-level" aria-expanded="false">
           <span class="sr-only">Open main menu</span>
@@ -23,12 +23,12 @@
           </svg>
       </button>
       <div class="hidden w-full md:block md:w-auto" id="navbar-multi-level">
-        <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white">
           <li>
             <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500 dark:bg-blue-600 md:dark:bg-transparent" aria-current="page">QUEM SOMOS</a>
           </li>
           <li>
-              <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:hover:bg-gray-700 md:dark:hover:bg-transparent">EMPRESAS <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+              <button id="dropdownNavbarLink" data-dropdown-toggle="dropdownNavbar" class="flex items-center justify-between w-full py-2 px-3 text-gray-900 hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 md:w-auto dark:text-white md:dark:hover:text-blue-500 dark:focus:text-white dark:hover:bg-gray-700 md:dark:hover:bg-transparent" style="color: black;">EMPRESAS <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
     </svg></button>
               <!-- Dropdown menu -->
@@ -68,13 +68,13 @@
               </div>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">PARCEIROS E CLIENTES</a>
+            <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent" style="color: black;">PARCEIROS E CLIENTES</a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">TRABALHE CONOSCO</a>
+            <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent" style="color: black;">TRABALHE CONOSCO</a>
           </li>
           <li>
-            <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">AGENDE UMA VISITA</a>
+            <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent" style="color: black;">AGENDE UMA VISITA</a>
           </li>
         </ul>
       </div>
@@ -143,11 +143,11 @@
             <!-- <span class="text-blue-700 dark:text-blue-500">
                 Quem Somos
             </span> -->
-            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Quem Somos</h2>
-            <p class="mb-4">
+            <h2 class="mb-4 text-4xl tracking-tight font-extrabold" style="color: rgb(68, 67, 67); font-style: italic;">Quem Somos</h2>
+            <p class="mb-4" style="color: black;">
                 O Grupo SN Ambiental atua com a MISSÃO de fornecer soluções eficientes em gestão integrada de resíduos, meio ambiente e construção civil, fazendo isso com primor técnico e de forma sustentável. 
             </p>
-            <p>
+            <p style="color: black;">
                 Desde 2005, o grupo vem consolidando-se por demonstrar organização e pontualidade dos serviços executados, além de compromisso com as questões socioambientais. A gestão de resíduos acontece com transparência em sua operação, obedecendo à legislação ambiental e apresentando para as gerações atuais e futuras a importância da integração entre o ser humano e o meio ambiente.
             </p>
             <button type="button" class="butao text-white bg-yellow-400 hover:bg-yellow-500 focus:outline-none focus:ring-4 focus:ring-yellow-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:focus:ring-yellow-900">Saiba Mais</button>
@@ -168,16 +168,16 @@
                 <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-primary-100 lg:h-12 lg:w-12 dark:bg-primary-900">
                     <img src="https://cdn-icons-png.flaticon.com/512/1628/1628441.png" class="h-8 logo" alt="missao"/>
                 </div>
-                <h3 class="mb-2 text-xl font-bold dark:text-white">MISSÃO</h3>
-                <p class="text-gray-500 dark:text-gray-400">Fornecer soluções em gestão integrada de resíduos, meio ambiente e construção civil com primor técnico e eficiência, de forma sustentável.</p>
+                <h3 class="mb-2 text-xl font-bold dark:text-white" style="color: rgb(68, 67, 67); font-style: italic;">MISSÃO</h3>
+                <p class="text-gray-500 dark:text-gray-400" style="color: black;">Fornecer soluções em gestão integrada de resíduos, meio ambiente e construção civil com primor técnico e eficiência, de forma sustentável.</p>
             </div>
             <div class="item2">
                 <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-primary-100 lg:h-12 lg:w-12 dark:bg-primary-900">
                     <img src="https://cdn-icons-png.flaticon.com/512/1356/1356663.png" class="h-8 logo" alt="visao"/>
                 </div>
-                <h3 class="mb-2 text-xl font-bold dark:text-white">VISÃO</h3>
-                <p class="text-gray-500 dark:text-gray-400">Ser uma empresa de gestão integrada de resíduos atuante desde a fase de coleta até a destinação final ambientalmente adequada;</p><br>
-                <p class="text-gray-500 dark:text-gray-400">Contribuir efetivamente para o bem estar de toda a população em um mercado de concorrência justa, fundamentado no custo-benefício da melhor oferta;</p><br>
+                <h3 class="mb-2 text-xl font-bold dark:text-white" style="color: rgb(68, 67, 67); font-style: italic;">VISÃO</h3>
+                <p class="text-gray-500 dark:text-gray-400" style="color: black;">Ser uma empresa de gestão integrada de resíduos atuante desde a fase de coleta até a destinação final ambientalmente adequada;</p><br>
+                <p class="text-gray-500 dark:text-gray-400" style="color: black;">Contribuir efetivamente para o bem estar de toda a população em um mercado de concorrência justa, fundamentado no custo-benefício da melhor oferta;</p><br>
                 <!-- <p class="text-gray-500 dark:text-gray-400">Executar obras civis e prestações de serviços baseadas em métodos construtivos sustentáveis;</p><br>
                 <p class="text-gray-500 dark:text-gray-400">Atuar ativamente na redução da emissão de carbono, assim como na erradicação de lixões.</p> -->
             </div>
@@ -185,9 +185,9 @@
                 <div class="flex justify-center items-center mb-4 w-10 h-10 rounded-full bg-primary-100 lg:h-12 lg:w-12 dark:bg-primary-900">
                     <img src="https://cdn-icons-png.flaticon.com/512/944/944015.png" class="h-8 logo" alt="visao"/>
                 </div>
-                <h3 class="mb-2 text-xl font-bold dark:text-white">VALORES</h3>
-                <p class="text-gray-500 dark:text-gray-400">Responsabilidade com a preservação do meio ambiente, contribuindo com a educação ambiental e orientação para o consumo consciente da comunidade onde atua;</p><br>
-                <p class="text-gray-500 dark:text-gray-400">Reconhecimento da importância do nosso papel social, bem como na promoção de saúde coletiva;</p><br>
+                <h3 class="mb-2 text-xl font-bold dark:text-white" style="color: rgb(68, 67, 67); font-style: italic;">VALORES</h3>
+                <p class="text-gray-500 dark:text-gray-400" style="color: black;">Responsabilidade com a preservação do meio ambiente, contribuindo com a educação ambiental e orientação para o consumo consciente da comunidade onde atua;</p><br>
+                <p class="text-gray-500 dark:text-gray-400" style="color: black;">Reconhecimento da importância do nosso papel social, bem como na promoção de saúde coletiva;</p><br>
                 <!-- <p class="text-gray-500 dark:text-gray-400">Valorização dos colaboradores com o respeito às normas de segurança, provendo educação continuada e utilizando a meritocracia como porta de oportunidades;</p><br>
                 <p class="text-gray-500 dark:text-gray-400">Organização da empresa para melhor desempenho e pontualidade dos serviços executados;</p><br>
                 <p class="text-gray-500 dark:text-gray-400">Investimento em inovação tecnológica para maior eficiência na execução de obras civis e prestação de serviços;</p><br>
@@ -206,8 +206,8 @@
             <!-- <span class="text-blue-700 dark:text-blue-500">
                 Quem Somos
             </span> -->
-            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Nossos Serviços</h2>
-            <p class="mb-4">
+            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white" style="color: rgb(68, 67, 67); font-style: italic;">Nossos Serviços</h2>
+            <p class="mb-4" style="color: black;">
                 O Grupo SN Ambiental executa soluções em gestão de resíduos sólidos, desde a coleta até a destinação final ambientalmente adequada, além de atividades em construção civil, pavimentação, extração de minerais (laterita, argila e pedra) e locação de máquinas e veículos pesados. Dessa forma, reúne empresas que congregam atividades vinculadas à proteção ao meio ambiente e cuidado com o bem estar da sociedade. 
             </p>
         
@@ -223,7 +223,7 @@
 
 
 <!-- FOOTER -->
-<footer class="bg-white dark:bg-gray-900">
+<footer class="bg-white">
     <!-- <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
@@ -270,12 +270,12 @@
       </div> -->
       <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
       <div class="sm:flex sm:items-center sm:justify-between rodapezin">
-          <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© Grupo SN Ambiental @ Todos os direitos reservados <br>
+          <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400" style="color: rgb(85, 81, 81);">© Grupo SN Ambiental @ Todos os direitos reservados <br>
             <a href="https://flowbite.com/" class="hover:underline">R. Rodrigues Coimbra, 1415 - Dirceu Arcoverde, Parnaíba - PI, 64210-170</a><br>
             <a href="https://flowbite.com/" class="hover:underline">Telefone: (86) 99850-0605 | E-mail: comercial@gruposnambiental.com.br</a>
           </span>
           <div class="flex mt-4 sm:justify-center sm:mt-0 rodapezin2">
-              <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
+              <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white" style="color: rgb(85, 81, 81);">
                   <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 8 19">
                         <path fill-rule="evenodd" d="M6.135 3H8V0H6.135a4.147 4.147 0 0 0-4.142 4.142V6H0v3h2v9.938h3V9h2.021l.592-3H5V3.591A.6.6 0 0 1 5.592 3h.543Z" clip-rule="evenodd"/>
                     </svg>
@@ -287,7 +287,7 @@
                     </svg>
                   <span class="sr-only">Discord community</span>
               </a> -->
-              <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5">
+              <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white ms-5" style="color: rgb(85, 81, 81);">
                   <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 17">
                     <path fill-rule="evenodd" d="M20 1.892a8.178 8.178 0 0 1-2.355.635 4.074 4.074 0 0 0 1.8-2.235 8.344 8.344 0 0 1-2.605.98A4.13 4.13 0 0 0 13.85 0a4.068 4.068 0 0 0-4.1 4.038 4 4 0 0 0 .105.919A11.705 11.705 0 0 1 1.4.734a4.006 4.006 0 0 0 1.268 5.392 4.165 4.165 0 0 1-1.859-.5v.05A4.057 4.057 0 0 0 4.1 9.635a4.19 4.19 0 0 1-1.856.07 4.108 4.108 0 0 0 3.831 2.807A8.36 8.36 0 0 1 0 14.184 11.732 11.732 0 0 0 6.291 16 11.502 11.502 0 0 0 17.964 4.5c0-.177 0-.35-.012-.523A8.143 8.143 0 0 0 20 1.892Z" clip-rule="evenodd"/>
                 </svg>
@@ -312,7 +312,6 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
 </html>
-
 
 
 
